plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'JGS'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'software.amazon.awssdk:ssm'
    implementation 'software.amazon.awssdk:auth'
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0")
    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
    implementation("io.awspring.cloud:spring-cloud-aws-starter")
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'
    implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL JDBC 드라이버 추가
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0")
    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.projectlombok:lombok'
    annotationProcessor('org.projectlombok:lombok')

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
    annotationProcessor('org.projectlombok:lombok')
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'

    // prometheus
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

}

tasks.named('test') {
    useJUnitPlatform()
}

configurations {
    all {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}